  a WAVE-compliant physical layer (at 5.9 GHz) is selected, and does not require 
  any association between devices (similar to an adhoc WiFi MAC), but is 
  otherwise similar (at this time) to a WifiNetDevice.  WAVE capabililties of 
  switching between control and service channels, or using multiple radios, are
  not yet modelled.

Bugs fixed
----------
- Bug 1778 - Implement TapBridge::IsLinkUp() function
- Bug 1777 - Implement the more direct way of "using" configuration of existing tap interface
- Bug 1776 - Improve CRC performance for CsmaNetDevice in emulation modes
- Bug 1789 - missing test condition for sigma in buildings-shadowing-test
- Bug 1798 - Changing the rate of onOffApplication might stop transmission
- Bug 1802 - FlowMon header deserialization problem with IPv4 fragments
- Bug 1807 - Multiple bugs in Ipv4L3Protocol::LocalDeliver
- Bug 1810 - IP packets can be sent on NetDevices not respecting the minimum MTU requirements
- Bug 1814 - IPv6 Packet with length not multiple of 8 bytes are fragmented incorrectly.

Release 3.18.1
==============

This release is mainly to provide updated compiler support (clang/LLVM)
and fix the Python API scanning facility.  A few additional bug fixes
and new features are described below.

Availability
------------
This release is available from:
http://www.nsnam.org/release/ns-allinone-3.18.1.tar.bz2

Supported platforms
-------------------
These platforms have been tested; others may work also:
- Fedora Core 19 (32/64 bit) with g++-4.8.1
- Ubuntu 13.10 (64 bit) with g++-4.8.1
- Ubuntu 12.04.3 (32/64 bit) with g++-4.6.3
- Ubuntu 10.04.4 LTS (64 bit) with g++-4.4.3
- OS X Mavericks 10.9 with Xcode 5.0.1 and clang-500.2.79
- OS X Mountain Lion 10.8.5 with Xcode 5 and g++-4.2.1
- FreeBSD 9.2-RELEASE (64 bit) with clang-3.3

New user-visible features
-------------------------
- It is now possible to randomize the time of the first beacon from an 
  access point.  Use an attribute "EnableBeaconJitter" to enable/disable 